Add Cipher project to encrypt password. Add string extensions to strip html. Create ReportService.ConsoleApp.Core console app project for test purposes.

--- a/ReportService/App.config
+++ b/ReportService/App.config
@@ -3,4 +3,13 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+	<appSettings>
+		<add key="HostSmtp" value="smtp.gmail.com"/>
+		<add key="Port" value="587"/>
+		<add key="EnableSsl" value="true"/>
+		<add key="SenderName" value="Report Serivce"/>
+		<add key="SenderEmail" value=""/>
+		<add key="SenderEmailPassword" value=""/>
+		<add key="ReceiverEmail" value=""/>
+	</appSettings>
 </configuration>
