Let reportSendingInterval and sendingReportHour gets its value from settings

--- a/ReportService/App.config
+++ b/ReportService/App.config
@@ -11,5 +11,7 @@
 		<add key="SenderEmail" value=""/>
 		<add key="SenderEmailPassword" value=""/>
 		<add key="ReceiverEmail" value=""/>
+		<add key="ErrorReportSendingInterval" value="60"/>
+		<add key="SendingReportHour" value="8"/>
 	</appSettings>
 </configuration>
