--- a/ReportService/App.config
+++ b/ReportService/App.config
@@ -9,7 +9,7 @@
 		<add key="EnableSsl" value="true"/>
 		<add key="SenderName" value="Report Serivce"/>
 		<add key="SenderEmail" value=""/>
-		<add key="SenderEmailPassword" value=""/>
+		<add key="SenderEmailPassword" value="encrypt:"/>
 		<add key="ReceiverEmail" value=""/>
 		<add key="ErrorReportSendingInterval" value="60"/>
 		<add key="SendingReportHour" value="8"/>
